Fix the language footer

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -7,6 +7,7 @@
     "Owner-Email":"vannam34760@gmail.com",
     "Owner-City":"Ho Chi Minh City",
     "Owner-Street-Address":"~~~ ",
+    "Owner-Address":"~~~~",
     "/=================*ACCOUNT*=================/": "",
 
     "Personal-Details": "Personal Details",
