Update  Brand Information

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -62,6 +62,7 @@
 
     "/=================*PAGE*=================/": "",
     "Offer": "Offer",
+    "Offers":"Offers",
     "Checkout": "Checkout",
     "FAQ": "FAQ",
 
