Fix Product Modal

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -200,7 +200,7 @@
   "Print-Invoice": "Print Invoice",
   "Thankyou": "Thank you",
   "Order-Received-Msg": "Your order have been received !",
-
+  "Insufficient-Stock":"Insufficient stock",
   
 
   "/=================* privacy-policy * =================/": "",
