--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -44,6 +44,8 @@
     "Login-Box-Text":"Login with your email and password",
     "Login-Success":"Login Success!",
     "Forgot-Password":"Forgot Password",
+    "Login-With-Google":"Login With Google",
+    "Login-With-Facebook":"Login With Facebook",
     "Not-Account":"Not have a account ?",
     "Register":"Register",
     "Or":"or",
@@ -261,7 +263,7 @@
   "Terms-Condition-Rights": "Reservation of Rights  ",
   "Terms-Condition-Rights-Docs": "We reserve the right to request that you remove all links or any particular link to our Website. You approve to immediately remove all links to our Website upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our Website, you agree to be bound to and follow these linking terms and conditions.  ",
   "Terms-Condition-Website": "Removal of links from our website  ",
-  "Terms-Condition-website-Docs": "If you find any link on our Website that is offensive for any reason, you are free to contact and inform us any moment. We will consider requests to remove links but we are not obligated to or so or to respond to you directly. We do not ensure that the information on this website is correct, we do not warrant its completeness or accuracy; nor do we promise to ensure that the website remains available or that the material on the website is kept up to date.  ",
+  "Terms-Condition-Website-Docs": "If you find any link on our Website that is offensive for any reason, you are free to contact and inform us any moment. We will consider requests to remove links but we are not obligated to or so or to respond to you directly. We do not ensure that the information on this website is correct, we do not warrant its completeness or accuracy; nor do we promise to ensure that the website remains available or that the material on the website is kept up to date.  ",
   "Terms-Condition-Disclaimer": "Disclaimer  ",
   "Terms-Condition-Disclaimer-Docs": "To the maximum extent permitted by applicable law, we exclude all representations, warranties and conditions relating to our website and the use of this website. Nothing in this disclaimer will:  ",
   "Terms-Condition-Disclaimer-Docs1": "1. limit or exclude our or your liability for death or personal injury;  ",
