Update Login TX

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -10,6 +10,7 @@
     "Owner-Address":"~~~~",
     "/=================*ACCOUNT*=================/": "",
 
+    "My-Account":"My Account",
     "Personal-Details": "Personal Details",
     "Name":"Name",
     "First-Name": "First Name",
