--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -63,7 +63,7 @@
 
     "No-Order": "You Have no order Yet!",
     "Recent-Orders":"Recent Orders",
-
+    "Coupon-Available":"Coupon Available",
     "/=================*PAGE*=================/": "",
     "Offer": "Offer",
     "Offers":"Offers",
