Fix Change Typescript

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -136,7 +136,7 @@
   "Slider1-Description": "Dramatically facilitate effective total linkage for go forward processes...",
 
   "Slider2-Title": "Best Different Type of Grocery Store",
-  "Slider2-Descriptio": "Quickly aggregate empowered networks after emerging products...",
+  "Slider2-Description": "Quickly aggregate empowered networks after emerging products...",
 
   "Slider3-Title": "Quality Freshness Guaranteed!",
   "Slider3-Description": "Intrinsicly fashion performance based products rather than accurate benefits...",
@@ -275,7 +275,7 @@
   "Terms-Condition-Disclaimer-Docs5": "The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty. As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.",
   "Items":"Items",
   "/=================*Featured Categories*=================/": "",
-  "Featured-Title": "Featured Categories",
+  "Featured-Title": "Browse All Categories",
   "Featured-Sub-Title": "Choose your necessary products from this feature categories.",
 
   "/=================*popular products*=================/": "",
