--- a/locales/vi/common.json
+++ b/locales/vi/common.json
@@ -5,77 +5,77 @@
   "Author":"KARAS",
   "Owner-Number":"+84 098701****",
   "Owner-Email":"vannam34760@gmail.com",
-  "Owner-City":"Ho Chi Minh City",
+  "Owner-City":"Thành Phố Hồ Chí Minh",
   "Owner-Street-Address":"~~~ ",
   "Owner-Address":"~~~~",
   "/=================*ACCOUNT*=================/": "",
 
-  "My-Account":"My Account",
-  "Personal-Details": "Personal Details",
-  "Name":"Name",
+  "My-Account":"Tài Khoản Của Tôi",
+  "Personal-Details": "Thông Tin Cá Nhân",
+  "Name":"Tên",
   "First-Name": "First Name",
   "Last-Name": "Last Name",
-  "Email-Address": "Email address",
-  "Phone-Number": "Phone Number",
-  "Password":"Password",
+  "Email-Address": "Địa Chỉ Email",
+  "Phone-Number": "Số Điện Thoại",
+  "Password":"Mật Khẩu",
   "Shipping-Detail": "Shipping Details",
   "Street-Address": "Street address",
-  "City": "City",
-  "Country": "Country",
+  "City": "Thành Phố",
+  "Country": "Quốc Gia",
   "Zip-Postal": "ZIP / Postal",
-  "Shipping-Cost": "Shipping Cost",
+  "Shipping-Cost": "Phí Vận Chuyện",
 
-  "Photo": "Photo",
-  "Your-Address": "Your Address",
-  "Phone-Mobile": "Phone/Mobile",
-  "Your-Mobile": "Your Mobile Number",
+  "Photo": "Ảnh",
+  "Your-Address": "Địa Chỉ Của Bạn",
+  "Phone-Mobile": "Số Điện Thoại",
+  "Your-Mobile": "Số Điện Thoại Của Bạn",
   
-  "Drag-Your-Image-Here": "Drag your image here",
-  "Current-Password": "Current Password",
-  "Your-Current-Password": "Your Current Password",
-  "New-Password": "New Password",
-  "Recover-Password":"Recover password",
-  "Your-New-Password": "Your New Password",
+  "Drag-Your-Image-Here": "Kéo Hình Ảnh vào đây",
+  "Current-Password": "Mật Khẩu Hiện Tại",
+  "Your-Current-Password": "Mật Khẩu Hiện Tại Của Bạn",
+  "New-Password": "Mật Khẩu Mới",
+  "Recover-Password":"Khôi Phục Mật Khẩu",
+  "Your-New-Password": "Mật Khẩu Mới Của Bạn",
 
 
-  "Shipping-Method": "Shipping Method",
-  "Signing-In":"Signing In",
-  "Signing-Up":"Signing Up",
-  "Create-Account":"Create an account",
-  "Create-Account-By-Email":"Create an account with email" ,
-  "Login":"Login",
-  "Login-Box-Text":"Login with your email and password",
-  "Login-Success":"Login Success!",
-  "Forgot-Password":"Forgot Password",
-  "Login-With-Google":"Login With Google",
-  "Login-With-Facebook":"Login With Facebook",
-  "Not-Account":"Not have a account ?",
-  "Your-Register-Email":"Your Register Email",
-  "Register":"Register",
-  "Or":"or",
+  "Shipping-Method": "Phương Thức Vận Chuyện",
+  "Signing-In":"Đăng Nhập",
+  "Signing-Up":"Đăng Kí",
+  "Create-Account":"Tạo Tài Khoản",
+  "Create-Account-By-Email":"Tạo Tài Khoản Với Email" ,
+  "Login":"Đăng Nhạp",
+  "Login-Box-Text":"Đăng Nhập Với Email và Mật Khẩu",
+  "Login-Success":"Đăng Nhập Thành Công!",
+  "Forgot-Password":"Quên Mật Khẩu",
+  "Login-With-Google":"Đăng Nhập Bằng Google",
+  "Login-With-Facebook":"Đăng Nhập Bằng Facebook",
+  "Not-Account":"Bạn Chưa có Tài Khoản?",
+  "Your-Register-Email":"Email Đăng ký của bạn",
+  "Register":"Đăng Ký",
+  "Or":"Hoặc",
   "Already-Account":"Have already account",
-  "Logout":"Logout",
-  "Reset-Your-Password":" Reset Your Password",
+  "Logout":"Đăng Xuất",
+  "Reset-Your-Password":" Khôi Phục Mật Khẩu",
 
-  "Dashboard": "Dashboard",
+  "Dashboard": "Trang Chủ",
   "Dashboard-Text": "This is User Dashboard",
-  "My-Orders": "My Orders",
-  "Update-Profile": "Update Profile",
+  "My-Orders": "Các Đơn Hàng Của Tôi",
+  "Update-Profile": "Cập Nhật Thông tin cá nhân",
   "Change-Password": "Change Password",
   "Reset-Password":"Reset Your Password",
   
 
-  "No-Order": "You Have no order Yet!",
+  "No-Order": "Bạn Chưa có đơn hàng nào!",
 
   "/=================*PAGE*=================/": "",
   "Offer": "Offer",
   "Offers":"Offers",
-  "Checkout": "Checkout",
+  "Checkout": "Thanh Toán",
   "FAQ": "FAQ",
 
   "/=================* About Us* =================/": "",
-  "About-Us": "About Us",
-  "About-Section-Title":"Welcome to our Grocecy",
+  "About-Us": "Về Chúng Tôi",
+  "About-Section-Title":"Chào Mừng Bạn đến với Grocery Store - Developed By Karas",
   "About-Section-Top-P1": "Holisticly seize parallel metrics and functional ROI.Seamlessly revolutionize error-free internal or organic sources before effective scenarios. Progressively incentivize state of the art applications for efficient intellectual capital. Credibly leverage existing distinctive mindshare through cutting-edge schemas. Proactively procrastinate team building paradigms coordinate client-centric total transparent internal.",
   "About-Section-Top-P2": "Dynamically embrace diverse customer service and installed base paradigms. Credibly seize enterprise-wide experiences for end-to-end data. Professionally brand flexible alignments and cost effective architectures. Enthusiastically incentivize seamless communities with seamlessly facilitate revolutionary metrics with strategic theme areas.",
   "About-Section-Top-P3": "Holisticly seize parallel metrics and functional ROI. Seamlessly revolutionize error-free internal or organic sources before effective scenarios. Progressively incentivize state of the art applications for efficient intellectual capital. Credibly leverage existing distinctive mindshare through cutting-edge schemas. Proactively procrastinate team building paradigms coordinate client-centric total transparent internal. Energistically reconceptualize global leadership for high-quality networks. Credibly restore an expanded array of systems rather than accurate results. Collaboratively synergize backend bandwidth without 24/7 functionalities. Credibly utilize proactive ideas whereas cross-media core competencies. Uniquely maximize professional best practices through resource maximizing services. Conveniently architect cross-unit web services for e-business imperatives.",
@@ -94,7 +94,7 @@
   "Hr-Officer": "HR Officer",
   "lead-developer": "Lead Developer",
 
-  "Contact-Us": "Contact Us",
+  "Contact-Us": "Liên Lạc với chúng tôi",
   "Privacy-Policy": "Privacy Policy",
   "Terms-&-Conditions": "Terms & Conditions",
 
