--- a/locales/vi/common.json
+++ b/locales/vi/common.json
@@ -61,8 +61,8 @@
   "Dashboard-Text": "This is User Dashboard",
   "My-Orders": "Các Đơn Hàng Của Tôi",
   "Update-Profile": "Cập Nhật Thông tin cá nhân",
-  "Change-Password": "Change Password",
-  "Reset-Password":"Reset Your Password",
+  "Change-Password": "Thay Đổi Mật Khẩu",
+  "Reset-Password":"Khôi Phục Mật Khẩu Của Bạn",
   
 
   "No-Order": "Bạn Chưa có đơn hàng nào!",
@@ -81,9 +81,9 @@
   "About-Section-Top-P3": "Holisticly seize parallel metrics and functional ROI. Seamlessly revolutionize error-free internal or organic sources before effective scenarios. Progressively incentivize state of the art applications for efficient intellectual capital. Credibly leverage existing distinctive mindshare through cutting-edge schemas. Proactively procrastinate team building paradigms coordinate client-centric total transparent internal. Energistically reconceptualize global leadership for high-quality networks. Credibly restore an expanded array of systems rather than accurate results. Collaboratively synergize backend bandwidth without 24/7 functionalities. Credibly utilize proactive ideas whereas cross-media core competencies. Uniquely maximize professional best practices through resource maximizing services. Conveniently architect cross-unit web services for e-business imperatives.",
   "About-Section-Top-P4": "Appropriately visualize market-driven data before one-to-one scenarios. Collaboratively productize multifunctional ROI through intuitive supply chains. Enthusiastically seize revolutionary value and process-centric services. Competently harness intuitive information after interoperable markets. Interactively revolutionize future-proof value before granular sources. Dynamically embrace diverse customer service and installed base paradigms. Credibly seize enterprise-wide experiences for end-to-end data. Professionally brand flexible alignments and cost effective architectures. Enthusiastically incentivize seamless communities with seamlessly facilitate revolutionary metrics with strategic theme areas.",
     
-  "About-Listed-Products-Box-Title": "Listed Products",
+  "About-Listed-Products-Box-Title": "Danh Sách Sản Phẩm",
   "About-Listed-Products-Box-Text": "Dynamically morph team driven partnerships after vertical.",
-  "About-Customer-Box-Title": "Lovely Customer",
+  "About-Customer-Box-Title": "Khách Hàng Yêu thích",
   "About-Customers-Box-Text": "Competently productize virtual models without performance.",
   "About-Our-Founder-Title": "Our Founder",
   "About-Our-Founder-Description": "We’re impartial and independent, and every day we create distinctive, world-class reintermediate backend supply programmes.",
@@ -95,12 +95,12 @@
   "lead-developer": "Lead Developer",
 
   "Contact-Us": "Liên Lạc với chúng tôi",
-  "Privacy-Policy": "Privacy Policy",
-  "Terms-&-Conditions": "Terms & Conditions",
+  "Privacy-Policy": "Chính Sách Bảo Mật",
+  "Terms-&-Conditions": "Điều Khoản và Điều Kiện",
 
   "Not-Found": "Not Found",
-  "Page-Not-Found-Title":"Page is not found!",
-  "Page-Not-Found-Description":"Sorry! This page is not found! Please try again later",
+  "Page-Not-Found-Title":"Trang Tìm Kiếm Không Tồn Tại!",
+  "Page-Not-Found-Description":"Xin Lỗi! Trang Này không tồn tại! Vui Lòng Thử Lại sau",
   "/=================*Button*=================/": "",
   "Back-To-Home":"Back to Home",
   "Shop-Now": "Shop Now",
