Fix the common file

--- a/locales/de/common.json
+++ b/locales/de/common.json
@@ -171,7 +171,7 @@
 "Contact-Page-Box2-Info": "Distinctively disseminate focused solutions clicks-and-mortar ministate.",
 
 "Contact-Page-Box3-Title": "Location",
-"Contact-Page-Box3-Title-Info": "Cecilia Chapman, 561-4535 Nulla LA, United States 96522",
+"Contact-Page-Box3-Title-Info": "",
 
 "Contact-Page-Form-Title": "For any suppoort just send your query",
 "Contact-Page-Form-Description": "Collaboratively promote client-focused convergence vis-a-vis customer directed alignments via plagiarize strategic users and standardized infrastructures.",
