--- a/locales/vi/common.json
+++ b/locales/vi/common.json
@@ -161,58 +161,58 @@
 "Soft-Drinks": "Soft Drinks",
 "Baby-Care": "Baby Care",
 
-"Beauty-Health": " Beauty & Health",
+"Beauty-Health": "Sắc Đẹp và Sức Khỏe",
 
-"Follow-Me": "Follow Me",
-"Call-Us": "Call Us Today!",
+"Follow-Me": "Theo Dõi Tại",
+"Call-Us": "Gọi Cho Chúng Tôi!",
 
 "/=================* Contact Us* =================/": "",
 
-"Email-Us":"Email Us",
+"Email-Us":"Email Của Chúng Tôi",
 "Contact-Page-Box1-Info": "Interactively grow empowered for process-centric total linkage.",
 
-"Contact-Page-Box2-Title": "call Us",
+"Contact-Page-Box2-Title": "Gọi Cho Chúng Tôi",
 "Contact-Page-Box2-Info": "Distinctively disseminate focused solutions clicks-and-mortar ministate.",
 
 "Contact-Page-Box3-Title": "Location",
-"Contact-Page-Box3-Title-Info": "Cecilia Chapman, 561-4535 Nulla LA, United States 96522",
+"Contact-Page-Box3-Title-Info": "484 Đường Lê Văn Việt, Quận 9, Thành Phố Hồ Chí Minh , Việt Nam",
 
-"Contact-Page-Form-Title": "For any suppoort just send your query",
+"Contact-Page-Form-Title": "Nếu Bạn có bất kì yêu cầu gì hãy gửi yêu cầu cho tôi",
 "Contact-Page-Form-Description": "Collaboratively promote client-focused convergence vis-a-vis customer directed alignments via plagiarize strategic users and standardized infrastructures.",
 
-"Contact-Page-Form-Input-Name": "Your Name",
-"Contact-Page-Form-Placholder-Name": "Enter Your Name",
-"Contact-Page-Form-Input-Email": "Your Email",
-"Contact-Page-Form-Placholder-Email": "Enter Your Email",
-"Contact-Page-Form-Input-Subject": "Subject",
-"Contact-Page-Form-Placholder-Subject": "Enter Your Subject",
-"Contact-Page-Form-Input-Message": "Message",
-"Contact-Page-Form-Placholder-Message": "Write your message here",
-"Contact-Page-Form-send": "Send Message",
+"Contact-Page-Form-Input-Name": "Tên của bạn",
+"Contact-Page-Form-Placholder-Name": "Nhập Tên của bạn",
+"Contact-Page-Form-Input-Email": "Email của bạn",
+"Contact-Page-Form-Placholder-Email": "Nhập Email của bạn",
+"Contact-Page-Form-Input-Subject": "Tiêu đề",
+"Contact-Page-Form-Placholder-Subject": "Nhập tiêu đề",
+"Contact-Page-Form-Input-Message": "Lời Nhắn",
+"Contact-Page-Form-Placholder-Message": "Viết lời nhắn ở đây",
+"Contact-Page-Form-send": "Gửi",
 
 "/=================* Invoice * =================/": "",
 
-"Invoice": "Invoice",
-"Date": "Date",
-"Invoice-No": "Invoice No.",
-"Invoice-To": "Invoice To.",
+"Invoice": "Hóa đơn",
+"Date": "Ngày",
+"Invoice-No": "Hóa đơn số.",
+"Invoice-To": "Hóa đơn đến.",
 "sr": "Sr.",
-"Product-Name": "Product Name",
-"Quantity": "Quantity",
-"Item-Price": "Item Price",
-"Amount": "Amount",
+"Product-Name": "Tên Sản Phẩm",
+"Quantity": "Số Lượng",
+"Item-Price": "Giá sản phẩm",
+"Amount": "Giá",
 
-"Total-Amount": "Total Amount",
-"Download-Invoice": "Download Invoice",
-"Print-Invoice": "Print Invoice",
-"Thankyou": "Thank you",
-"Order-Received-Msg": "Your order have been received !",
-"Insufficient-Stock":"Insufficient stock",
+"Total-Amount": "Thành Tiền",
+"Download-Invoice": "Tải Hóa Đơn",
+"Print-Invoice": "In Hóa Đơn",
+"Thankyou": "Cám ơn bạn",
+"Order-Received-Msg": "Đơn Hàng của bạn đã được nhận!",
+"Insufficient-Stock":"Hết hàng",
 
 
 "/=================* privacy-policy * =================/": "",
 
-"Privacy-Policy-Update-Date": "Last updated: Jun 13, 2023  ",
+"Privacy-Policy-Update-Date": "Last updated: Jun 13, 2023 ",
 "Privacy-Policy-Update-Date-Docs1": "At Grocecy Store, accessible from grocecy dot com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Karas and how we use it. If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, and any other information you may choose to provide. When you register for an Account, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number.",
 "Privacy-Policy-Update-Date-Docs2": "This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in Karas .we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the Free Privacy Policy Generator.",
 "Privacy-Policy-Consent": "Consent",
@@ -220,7 +220,7 @@
 "Privacy-Policy-Information": "Information we collect  ",
 "Privacy-Policy-Information-Docs1": "The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information. If you contact us directly, we may receive additional information about you such may choose to provide. When you register for an Account, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number.  ",
 "Privacy-Policy-Information-Docs2": "Please note that the Company will not ask you to share any sensitive data or information via email or telephone. If you receive any such request by email or telephone, please do not respond/divulge any sensitive data or information and forward the information relating to the same to",
-"Privacy-Policy-Use-Information": "How we use your information  ",
+"Privacy-Policy-Use-Information": "Chúng tôi sử dụng thông tin của bạn như thế nào",
 "Privacy-Policy-Use-Information-Docs": "We use the information we collect in various ways, including to:",
 "Privacy-Policy-Use-Information-Docs1": "1. Provide, operate, and maintain our website, to provide you with updates and other information.  ",
 "Privacy-Policy-Use-Information-Docs2": "2. Improve, personalize, and expand our website,and other information relating to the website.  ",
@@ -354,19 +354,19 @@
 
 "Shopping-Cart-Drawer-Title": "Shopping Cart",
 "CloseBtn": "Close",
-"Cart-Empty-Title": "Your cart is empty",
+"Cart-Empty-Title": "Giỏ hàng của bạn đang trống",
 "Cart-Empty-Text": " No items added in your cart. Please add product to your cart list.",
-"Proceed-To-Checkout": "Proceed To Checkout",
+"Proceed-To-Checkout": "Tiến hành thanh toán",
 
 "/=================*SEARCH*=================/": "",
-"Search-Placeholder":"Search for products (e.g. fish, apple, oil)",
-"Top-Search": "Search for product (e.g. fish, apple, oil)",
-"Brands":"Brands",
-"Drag-Image-Here":"Drag your image here",
-"Image-Type-Accept":"Only *.jpeg and *.png images will be accepted",
+"Search-Placeholder":"ìm kiếm các sản phẩm (ví dụ. cá, táo , dầu)",
+"Top-Search": "Tìm kiếm các sản phẩm (ví dụ. cá, rau, dầu..)",
+"Brands":"Các Thương Hiệu",
+"Drag-Image-Here":"Kéo Hình ảnh của bạn vào đây",
+"Image-Type-Accept":"Chỉ các file hình ảnh  *.jpeg and *.png mới được chấp nhận",
 "Inactive":"Inactive",
-"Active":"Active",
-"This-Coupon-apply-more":"* This coupon apply when shopping more then"
+"Active":"Kích Hoạt",
+"This-Coupon-apply-more":"* Mã giảm giá này có thể áp dụng khi mà đơn hàng"
 
 
 
