--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -173,7 +173,7 @@
   "Contact-Page-Box2-Info": "Distinctively disseminate focused solutions clicks-and-mortar ministate.",
 
   "Contact-Page-Box3-Title": "Location",
-  "Contact-Page-Box3-Title-Info": "GMT HCM City , Viet Nam",
+  "Contact-Page-Box3-Title-Info": "484 Le Van Viet Street, Thu Duc District, HCM City , Viet Nam",
 
   "Contact-Page-Form-Title": "For any suppoort just send your query",
   "Contact-Page-Form-Description": "Collaboratively promote client-focused convergence vis-a-vis customer directed alignments via plagiarize strategic users and standardized infrastructures.",
