Fĩ the language

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -328,7 +328,7 @@
   "Total-Cost": "TOTAL COST",
 
   "Method":"Method",
-  "Oder-Time": "ORDERTIME",
+  "Order-Time": "ORDERTIME",
   "Status":"Status",
   "Total": "TOTAL",
   "Details": "Details",
