--- a/locales/vi/common.json
+++ b/locales/vi/common.json
@@ -309,9 +309,9 @@
 "Feature-Promo4-Title": "Latest Offer",
 "Feature-Promo4-Sub-Title": "Upto 20% Off",
 "/=================*SHOP - PAYMENT- Order*=================/": "",
-"Payment-Method": "Payment Method",
-"Payment-Required":"Payment Method is required!",
-"Cash-On-Delivery": "Cash On Delivery",
+"Payment-Method": "Phương Thức Thanh Toán",
+"Payment-Required":"Vui lòng điền thông tin phương thức thanh toán!",
+"Cash-On-Delivery": "Thanh toán bằng tiền mặt",
 "Delivery":"Delivery",
 "Credit-Card": "Credit Card",
 "PayPal": "PayPal",
@@ -321,30 +321,30 @@
 "Confirm-Order": "Confirm Order",
 "Processing": "Processing",
 
-"Order-Summary": "Order Summary",
-"Apply": "Apply",
+"Order-Summary": "Tổng Giá trị đơn hàng",
+"Apply": "Áp dụng",
 "Coupon-Code": "Input your coupon code",
 "Subtotal": "Subtotal",
 
-"Discount": "Discount",
+"Discount": "Giảm giá",
 "Total-Cost": "TOTAL COST",
 
 "Method":"Method",
-"Oder-Time": "ORDERTIME",
+"Order-Time": "Thời gian đặt hàng",
 "Status":"Status",
 "Total": "TOTAL",
 "Details": "Details",
-"Tota-lOrder": "Total Order",
+"Tota-lOrder": "Tổng đơn hàng",
 "Pending-Order": "Pending Order",
-"Processing-Order": "Processing Order",
-"Complete-Order": "Complete Order",
+"Processing-Order": "Đơn Hàng đang vận chuyển",
+"Complete-Order": "Đơn đã giao",
 
 "Recent-Order": "Recent Order",
-"More-Info": "More Info",
+"More-Info": "Thêm Thông Tin",
 "Show-Less": "Show Less",
 "Stock-Out": "Stock Out",
 "In-Stock": "In Stock",
-"Add-To-Cart": "Add to Cart",
+"Add-To-Cart": "Thêm vào giỏ hàng",
 "Category": "Category",
 "Categories":"Categories",
 "Share-Your-Social": "Share your social network",
@@ -355,7 +355,7 @@
 "Shopping-Cart-Drawer-Title": "Shopping Cart",
 "CloseBtn": "Close",
 "Cart-Empty-Title": "Giỏ hàng của bạn đang trống",
-"Cart-Empty-Text": " No items added in your cart. Please add product to your cart list.",
+"Cart-Empty-Text": "No items added in your cart. Please add product to your cart list.",
 "Proceed-To-Checkout": "Tiến hành thanh toán",
 
 "/=================*SEARCH*=================/": "",
