--- a/locales/vi/common.json
+++ b/locales/vi/common.json
@@ -18,8 +18,8 @@
   "Email-Address": "Địa Chỉ Email",
   "Phone-Number": "Số Điện Thoại",
   "Password":"Mật Khẩu",
-  "Shipping-Detail": "Shipping Details",
-  "Street-Address": "Street address",
+  "Shipping-Detail": "Chi tiết Vận Chuyển",
+  "Street-Address": "Địa chỉ đường",
   "City": "Thành Phố",
   "Country": "Quốc Gia",
   "Zip-Postal": "ZIP / Postal",
@@ -102,22 +102,22 @@
   "Page-Not-Found-Title":"Trang Tìm Kiếm Không Tồn Tại!",
   "Page-Not-Found-Description":"Xin Lỗi! Trang Này không tồn tại! Vui Lòng Thử Lại sau",
   "/=================*Button*=================/": "",
-  "Back-To-Home":"Back to Home",
-  "Shop-Now": "Shop Now",
-  "Continue-Shopping": "Continue Shopping",
-  "Next":"Next",
-  "Previous":"Previosus",
+  "Back-To-Home":"Quay Lại Trang Chủ",
+  "Shop-Now": "Mua Ngay",
+  "Continue-Shopping": "Tiếp Tục Mua Sắm",
+  "Next":"Tiếp",
+  "Previous":"Trước đó",
   "Action":"Action",
   "Load-More": "Load More",
-  "Items-Found":"Items Found",
-  "Sort-By-Price":"Sort By Price",
-  "Low-To-High":"Low To High",
-  "High-To-Low":"High To Low",
-  "Sorry-Text":"Sorry, We can not find this products",
+  "Items-Found":"Số Sản Phẩm Tìm thấy",
+  "Sort-By-Price":"Sắp xếp theo giá",
+  "Low-To-High":"Thấp đến Cao",
+  "High-To-Low":"Cao Đến Thấp",
+  "Sorry-Text":"Xin Lỗi, Chúng tôi không thể tìm thấy sản phẩm này",
 
   "/=================* faq* =================/": "",
-"Faq-Title": "Frequently Asked Questions",
-"Faq-Question1": "How does the Grocecy Store work?",
+"Faq-Title": "Câu hỏi thường gặp",
+"Faq-Question1": "Grocery Store hoạt động như thế nào?",
 "Faq-Question1-Ans": "The Grocecy Store work like the normal ecomerece website.In our website , we sale many product like to vegetable , fruits ,household .....After you add products which are you want to buy, you can click Checkout product. Our support will get invoice detail and accept if it valid and our Shipper will send its to you",
 "Faq-Question2": "Can I cancel my subscription anytime?",
 "Faq-Question2-Ans": "Abosolutely Yes. If you decide to cancel your subscription, you have the freedom to do so at any time. Your subscription will remain active until the completion of your current term, whether it is a month or a year, but it will not automatically renew thereafter. However, please note that unless you manually delete your account, all associated data will be permanently removed 60 days from the date your subscription becomes inactive.",
@@ -154,7 +154,7 @@
 "Footer-Top-Title": "Get Your Daily Needs From Our Karas Store",
 "Footer-Top-paragraph-text": "There are many products you will find our shop, Choose your daily necessary product from our Karas shop and get some special offer.",
 
-"Customer-Services": "Customer Services",
+"Customer-Services": "Dịch Vụ Khách Hàng",
 "Top-Category": "Top Category",
 " All-Categories":"All Categories",
 "Fish-Meat": "Fish & Meat",
@@ -297,17 +297,17 @@
 "Discounted-Products-Description": "See Our latest discounted products below. Choose your daily needs from here and get a special discount with free shipping.",
 
 "/=================*Feature Promo*=================/": "",
-"Feature-Promo1-Title": "Free Shipping",
-"Feature-Promo1-Sub-Title": "From $500.00",
+"Feature-Promo1-Title": "Miễn Phí Vận Chuyển",
+"Feature-Promo1-Sub-Title": "Từ $500.00",
 
-"Feature-Promo2-Title": "Support 24/7",
-"Feature-Promo2-Sub-Title": "At Anytime",
+"Feature-Promo2-Title": "Hỗ Trợ 24/7",
+"Feature-Promo2-Sub-Title": "Bất Kỳ Lúc Nào",
 
 "Feature-Promo3-Title": "Secure Payment",
 "Feature-Promo3-Sub-Title": "Totally Safe",
 
-"Feature-Promo4-Title": "Latest Offer",
-"Feature-Promo4-Sub-Title": "Upto 20% Off",
+"Feature-Promo4-Title": "Offer Mới Nhất",
+"Feature-Promo4-Sub-Title": "Giảm Giá lên đến 20%",
 "/=================*SHOP - PAYMENT- Order*=================/": "",
 "Payment-Method": "Phương Thức Thanh Toán",
 "Payment-Required":"Vui lòng điền thông tin phương thức thanh toán!",
@@ -323,7 +323,7 @@
 
 "Order-Summary": "Tổng Giá trị đơn hàng",
 "Apply": "Áp dụng",
-"Coupon-Code": "Input your coupon code",
+"Coupon-Code": "Nhập Mã Giảm Giá Của Bạn",
 "Subtotal": "Subtotal",
 
 "Discount": "Giảm giá",
@@ -345,15 +345,15 @@
 "Stock-Out": "Stock Out",
 "In-Stock": "In Stock",
 "Add-To-Cart": "Thêm vào giỏ hàng",
-"Category": "Category",
-"Categories":"Categories",
+"Category": "Loại",
+"Categories":"Các Loại",
 "Share-Your-Social": "Share your social network",
 "Share-Your-Social-Text": "For get lots of traffic from social network share this product",
 "Related-Products": "Related Products",
-"Stock": "Stock",
+"Stock": "Kho Hàng",
 
 "Shopping-Cart-Drawer-Title": "Shopping Cart",
-"CloseBtn": "Close",
+"CloseBtn": "Đóng",
 "Cart-Empty-Title": "Giỏ hàng của bạn đang trống",
 "Cart-Empty-Text": "No items added in your cart. Please add product to your cart list.",
 "Proceed-To-Checkout": "Tiến hành thanh toán",
